# AstroWikiBuilder

./: .gitignore  .pre-commit-config.yaml  COVERAGE_PLAN.md  ENHANCEMENT_TASKS.md  Makefile  NEA_USAGE_REPORT.md  NOUVELLES_INFORMATIONS_SECTIONS.md  PROJECT_STATUS.md  README.md  ROADMAP.md  STATISTICS_ENHANCEMENTS.md  STATISTICS_IMPLEMENTATION.md  coverage.json  pyproject.toml  requirements.txt  test_output.txt  test_output_current.txt  test_output_unit.txt  test_references.py
.github/workflows/: tests.yml
data/: exoplanet_eu.csv
data/cache/: exoplanet_eu_mock.csv  nea_mock_data_st_spectype.json  open_exoplanet_mock.csv
data/cache/exoplanet_eu/: exoplanet_eu.csv  exoplanet_eu_mock.csv
data/cache/nasa_exoplanet_archive/: nasa_mock_data.csv
data/notes/: categories_notes.md  columns_api_nea.md  planet_types_notes.md
docs/: ANALYSE_REDONDANCES_SECTIONS.md  ARCHITECTURE.md  CI_CD.md  CLASSIFICATION_EXOPLANETES.md  CONTRIBUTING.md  SETUP_SUMMARY.md
drafts/: 11_Com_b.wiki  16_Cygni_B_b.wiki  1RXS1609_b.wiki  1SWASP_J1407_b.wiki  2MASS_J01225093-2439505_b.wiki  2MASS_J21252752-8138278_b.wiki  2MASS_J21265040-8140293.wiki  47_UMa_b.wiki  51_Peg_b.wiki  8_Ursae_Minoris_b.wiki  Alpha_Centauri_B_b.wiki  BD+02.3313_b.wiki  BD+20_1790_b.wiki  BD+49_828_b.wiki  BD+63_1405_Ab.wiki  BD-06_1339_b.wiki  BD-06_1339_c.wiki  BD-06_1339_d.wiki  BD-10_3166_b.wiki  BD-17_63_b.wiki  CoRoT-20_b.wiki  CoRoT-20_c.wiki  CoRoT-29_b.wiki  DENIS-P_J082303.1-491201_b.wiki  EPIC_201595106_b.wiki  EPIC_201702477_b.wiki  EPIC_204221263_c.wiki  GJ_1002_b.wiki  GJ_1002_c.wiki  GJ_1132_b.wiki  GJ_1214_b.wiki  GJ_176_b.wiki  GJ_180_b.wiki  GJ_180_c.wiki  GJ_273_b.wiki  GJ_3222_Ab.wiki  GJ_3293_b.wiki  GJ_3293_c.wiki  GJ_3293_d.wiki  GJ_3323_b.wiki  (+394 more)
notes/: categories_notes.md  columns_exo_star.md  correspondances_notes.md  exemple_star.md  exoplanete_notes.md  star_notes.md  star_type_notes.md  wikipedia_notes.md
output/: exoplanets_20250517_223116.csv
src/: __init__.py  generate_star_drafts_main.py  main.py
src/collectors/: base_collector.py
src/collectors/implementations/: exoplanet_eu.py  exoplanet_eu_collector.py  (+3 more)
src/constants/: __init__.py  categories_rules.yaml  field_mappings.py  wikipedia_field_config.py
src/core/: config.py  main.py
src/data_collectors/: __init__.py  base_collector.py  exoplanet_eu.py  nasa_exoplanet.py  nasa_exoplanet_archive.py  nasa_exoplanet_archive_collector.py  open_exoplanet.py  open_exoplanet_collection.py
src/formatters/: README.md  __init__.py  field_formatters.py
src/generators/: base_article_generator.py  base_category_generator.py  base_infobox_generator.py  category_generator.py  exoplanet_infobox_generator_v2.py  star_infobox_generator_v2.py
src/mappers/: __init__.py  exoplanet_infobox_mapper.py  exoplanet_mapping.py  exoplanet_mapping_infobox.py  infobox_mapper.py  nasa_exoplanet_archive_mapper.py  nasa_to_star_mapper.py  star_infobox_mapper.py  star_mapping.py  star_mapping_infobox.py
src/models/: __init__.py  data_source_exoplanet.py  data_source_star.py  exoplanet.py  infobox_fields.py  reference.py  star.py
src/orchestration/: __init__.py  cli_parser.py  data_pipeline.py  draft_pipeline.py  pipeline_executor.py  service_initializer.py
src/pour_plus_tard/: exoplanet_eu.py  open_exoplanet_collection.py
src/services/: __init__.py  data_processor.py  exoplanet_repository.py  export_service.py  reference_manager.py  star_repository.py  statistics_service.py  wikipedia_service.py
src/utils/: category_generator.py  category_parser.py  comparison_utils.py  constellation_utils.py  data_processor.py  directory_util.py  directory_utils.py  draft_utils.py  exoplanet_category_generator.py  exoplanet_comparison_utils.py  exoplanet_infobox_generator.py  exoplanet_introduction_generator.py  exoplanet_type_utils.py  format_utils.py  infobox_generator.py  introduction_generator.py  planet_type_utils.py  reference_manager.py  reference_utils.py  star_infobox_generator.py  star_type_utils.py  star_utils.py  wikipedia_checker.py  wikipedia_exoplanet_generator.py  wikipedia_generator.py  wikipedia_star_generator.py
tests/: __init__.py  conftest.py
tests/data_collectors/: test_exoplanet_eu_collector.py  test_open_exoplanet_collection.py
tests/integration/: __init__.py  test_full_pipeline.py
tests/services/: test_exoplanet_repository.py
tests/unit/: __init__.py
tests/utils/: test_category_generator.py  test_data_processor.py  test_star_generation.py  test_wikipedia_generator.py
tools/: __init__.py  csv_to_json.py  download_nasa_data.py  random_exoplanets.py
(+228 files in other folders)
