[project]
name = "astro-wiki-builder"
version = "1.1.0"
description = "Outil Python pour collecter, consolider et transformer des données astronomiques en projets d'articles Wikipédia"
authors = [
    {name = "Machi Chiotte", email = "machichiotte@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
keywords = ["astronomy", "wikipedia", "exoplanet", "data-collection", "article-generation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
]

dependencies = [
    "requests>=2.32.3",
    "pandas>=2.2.3",
    "astroquery>=0.4.10",
    "sqlalchemy>=2.0.41",
    "python-dotenv>=1.1.0",
    "numpy>=2.2.6",
    "beautifulsoup4>=4.13.4",
    "PyYAML>=6.0.2",
    "pytz>=2025.2",
    "wikipedia>=1.4.0",
    "pyvo>=1.6.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.15.1",
    "black>=25.1.0",
    "ruff>=0.12.0",
    "mypy>=1.16.1",
]

[project.urls]
Homepage = "https://github.com/machichiotte/AstroWikiBuilder"
Repository = "https://github.com/machichiotte/AstroWikiBuilder"
Documentation = "https://github.com/machichiotte/AstroWikiBuilder/blob/main/README.md"
Issues = "https://github.com/machichiotte/AstroWikiBuilder/issues"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.mypy]
strict = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
python_version = "3.13"
files = ["src"]
exclude = ["tests", "venv", "build"]
explicit_package_bases = true

[tool.black]
line-length = 100
target-version = ["py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/pour_plus_tard/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
